--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
 
     <div ui-view></div>
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
@@ -41,6 +42,7 @@
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
     <!-- endbuild -->
+    <script src="/bower_components/angular-resource/angular-resource.js"></script>
 
   </body>
 </html>
